--- a/map.css
+++ b/map.css
@@ -45,7 +45,7 @@ a:visited {
 
 .sidebar {
     display: flex;
-    flex-basis: 50rem;
+    flex-basis: 35rem;
     background-color: var(--color-dark--1);
     padding: 3rem 5rem 4rem 5rem;
     flex-direction: column;
@@ -137,7 +137,7 @@ a:visited {
     grid-template-columns: 1fr 1fr;
     gap: 0.5rem 2.5rem;
     /* Match height and activity boxes */
-    height: 9.25rem;
+    height: auto;
     transition: all 0.5s, transform 1ms;
 }
 
@@ -181,7 +181,12 @@ a:visited {
 }
 
 .form__btn {
-    display: none;
+    /* display: none; */
+    width: 50px;
+    margin-top: 10px;
+    border-radius: 5px;
+    font-size: 15px;
+    padding: 3px;
 }
 
 
@@ -220,6 +225,17 @@ a:visited {
 }
 
 @media (max-width:500px) {
+    .sidebar {
+        display: flex;
+        flex-basis: 35rem;
+    }
+    .form__btn {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .workouts {
+        height: 100%;
+    }
     .workout {
         background-color: var(--color-dark--2);
         border-radius: 5px;
